# oxidedfantasy

./: .env  Cargo.toml  tool.js
.cargo/: config.toml
database/: Cargo.toml
database/src/: lib.rs  links.rs
database/src/entities/: event_status.rs  links.rs  match.rs  match_monitor.rs  match_opponent.rs  match_result.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  transaction.rs  user.rs
database/src/models/: create_user.rs  match.rs  mod.rs
database/src/repositories/: event_status.rs  event_status_repository.rs  match_repository.rs  mod.rs  user_repository.rs
prisma/: schema.prisma
scheduler/: Cargo.toml
scheduler/src/: event_status_crawler.rs  lib.rs  main.rs  match_worker.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs
server/src/extractors/: mod.rs  security.rs  state.rs  validator.rs
server/src/handlers/: mod.rs
server/src/handlers/create_match/: mod.rs
server/src/handlers/create_matches/: mod.rs
server/src/handlers/facebook_register/: mod.rs
server/src/handlers/get_matches/: mod.rs
server/src/handlers/google_register/: mod.rs
server/src/handlers/join_match/: mod.rs
server/src/handlers/login/: mod.rs
server/src/handlers/shared/: generate_tokens.rs  mod.rs
server/src/handlers/update_fpl_id/: mod.rs
server/src/responses/: auth.rs  mod.rs
services/: Cargo.toml
services/src/: bootstrap.rs  entry.rs  lib.rs
services/src/facebook/: auth.rs
services/src/fantasy/: bootstrap.rs  entry.rs
services/src/google/: auth.rs  mod.rs  oauth2v3.rs
watcher/: Cargo.toml
watcher/src/: lib.rs  main.rs
