[package]
name = "dfantasy"
version = "0.1.0"
edition = "2021"

[workspace]

resolver = "2"

members = [
    "scheduler",
    "server",
    "watcher",
    "database", 
    "services"
]

[package.metadata.commands]
sea-gen = "sea generate entity -o database/src/entities --with-serde both"

[dependencies]
server = { path = "./server" }

