[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
sea-orm = { version = "0.12.10", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "sea-orm-internal", "with-json" ] } 
services = { path = "../services" }
chrono = "0.4.31"
