[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["full"] }
services = { path = "../services" }
database = { path = "../database" }
futures = "0.3.30"
cron = "0.12.0"