[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["http2"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
jsonwebtoken = "9.2.0"
serde_json = "1.0.111"
chrono = "0.4.31"
deadpool-redis = "0.14.0"
dotenv = "0.15.0"
anyhow = "1.0.79"
database = { path = "../database" }
services ={ path = "../services" }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
